[package]
name = "rmr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
snafu = "0.7"
atoi = "1.0.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0"

[dev-dependencies]
httpmock = "0.6"
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
